// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshots matches active snapshot 1`] = `
<Button
  active={true}
  clickAction={[Function]}
  disabled={false}
  label="Button"
  orientation="horizontal"
  size="normal"
/>
`;

exports[`Button Snapshots matches disabled snapshot 1`] = `
<Button
  active={false}
  clickAction={[Function]}
  disabled={true}
  label="Button"
  orientation="horizontal"
  size="normal"
/>
`;

exports[`Button Snapshots matches orientation snapshots 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #fff;
  border-color: #f0f0f0;
  border-top-color: #fff;
  border-bottom-color: #d1d1d1;
  color: #000;
  font-size: 14px;
  border-radius: 6px;
  padding: 4px 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 4px;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #ececec;
  border-color: #ddd;
  border-top-color: #f4f4f4;
  border-bottom-color: #bebebe;
  color: #000;
}

.c0:hover {
  background-color: #fbfbfb;
  border-color: #ececec;
  border-top-color: #fff;
  border-bottom-color: #cdcdcd;
  color: #000;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #f0f0f0;
  border-color: #f0f0f0;
  color: #000;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-top: 0.25px;
}

<button
  class="c0"
  orientation="vertical"
  title="vertical"
>
  <span>
    vertical
  </span>
</button>
`;

exports[`Button Snapshots matches orientation snapshots 2`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #fff;
  border-color: #f0f0f0;
  border-top-color: #fff;
  border-bottom-color: #d1d1d1;
  color: #000;
  font-size: 14px;
  border-radius: 6px;
  padding: 4px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #ececec;
  border-color: #ddd;
  border-top-color: #f4f4f4;
  border-bottom-color: #bebebe;
  color: #000;
}

.c0:hover {
  background-color: #fbfbfb;
  border-color: #ececec;
  border-top-color: #fff;
  border-bottom-color: #cdcdcd;
  color: #000;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #f0f0f0;
  border-color: #f0f0f0;
  color: #000;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="horizontal"
>
  <span>
    horizontal
  </span>
</button>
`;

exports[`Button Snapshots matches outline snapshots 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #fff;
  border-color: #fff;
  border-top-color: #fff;
  border-bottom-color: #f0f0f0;
  color: #000;
  font-size: 14px;
  border-radius: 6px;
  padding: 4px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #ececec;
  border-color: #ececec;
  border-top-color: #fbfbfb;
  border-bottom-color: #ddd;
  color: #000;
}

.c0:hover {
  background-color: #fbfbfb;
  border-color: #fbfbfb;
  border-top-color: #fff;
  border-bottom-color: #ececec;
  color: #000;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #f0f0f0;
  border-color: #f0f0f0;
  color: #000;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="raised"
>
  <span>
    raised
  </span>
</button>
`;

exports[`Button Snapshots matches outline snapshots 2`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #fff;
  border-color: #f0f0f0;
  color: #000;
  font-size: 14px;
  border-radius: 6px;
  padding: 4px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #ececec;
  border-color: #ddd;
  color: #000;
}

.c0:hover {
  background-color: #fbfbfb;
  border-color: #ececec;
  color: #000;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #f0f0f0;
  border-color: #f0f0f0;
  color: #000;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="outline"
>
  <span>
    outline
  </span>
</button>
`;

exports[`Button Snapshots matches outline snapshots 3`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #fff;
  border-color: #fff;
  border-bottom-color: #f0f0f0;
  color: #000;
  font-size: 14px;
  border-radius: 6px;
  padding: 4px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #ececec;
  border-color: #ececec;
  border-bottom-color: #ddd;
  color: #000;
}

.c0:hover {
  background-color: #fbfbfb;
  border-color: #fbfbfb;
  border-bottom-color: #ececec;
  color: #000;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #f0f0f0;
  border-color: #f0f0f0;
  color: #000;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="shadow"
>
  <span>
    shadow
  </span>
</button>
`;

exports[`Button Snapshots matches outline snapshots 4`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #fff;
  border-color: #fff;
  color: #000;
  font-size: 14px;
  border-radius: 6px;
  padding: 4px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #ececec;
  border-color: #ececec;
  color: #000;
}

.c0:hover {
  background-color: #fbfbfb;
  border-color: #fbfbfb;
  color: #000;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #f0f0f0;
  border-color: #f0f0f0;
  color: #000;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="none"
>
  <span>
    none
  </span>
</button>
`;

exports[`Button Snapshots matches outline snapshots 5`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #fff;
  border-color: #f0f0f0;
  border-top-color: #fff;
  border-bottom-color: #d1d1d1;
  color: #000;
  font-size: 14px;
  border-radius: 6px;
  padding: 4px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #ececec;
  border-color: #ddd;
  border-top-color: #f4f4f4;
  border-bottom-color: #bebebe;
  color: #000;
}

.c0:hover {
  background-color: #fbfbfb;
  border-color: #ececec;
  border-top-color: #fff;
  border-bottom-color: #cdcdcd;
  color: #000;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #f0f0f0;
  border-color: #f0f0f0;
  color: #000;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="raised-outline"
>
  <span>
    raised-outline
  </span>
</button>
`;

exports[`Button Snapshots matches prefix/suffix snapshot 1`] = `
<Button
  active={false}
  clickAction={[Function]}
  disabled={false}
  label="Button"
  orientation="horizontal"
  prefix="Prefix"
  size="normal"
  suffix="Suffix"
/>
`;

exports[`Button Snapshots matches size snapshots 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #fff;
  border-color: #f0f0f0;
  border-top-color: #fff;
  border-bottom-color: #d1d1d1;
  color: #000;
  font-size: 14px;
  border-radius: 6px;
  padding: 4px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #ececec;
  border-color: #ddd;
  border-top-color: #f4f4f4;
  border-bottom-color: #bebebe;
  color: #000;
}

.c0:hover {
  background-color: #fbfbfb;
  border-color: #ececec;
  border-top-color: #fff;
  border-bottom-color: #cdcdcd;
  color: #000;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #f0f0f0;
  border-color: #f0f0f0;
  color: #000;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="normal"
>
  <span>
    normal
  </span>
</button>
`;

exports[`Button Snapshots matches size snapshots 2`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #fff;
  border-color: #f0f0f0;
  border-top-color: #fff;
  border-bottom-color: #d1d1d1;
  color: #000;
  font-size: 7px;
  border-radius: 6px;
  padding: 4px 6px;
  text-transform: uppercase;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #ececec;
  border-color: #ddd;
  border-top-color: #f4f4f4;
  border-bottom-color: #bebebe;
  color: #000;
}

.c0:hover {
  background-color: #fbfbfb;
  border-color: #ececec;
  border-top-color: #fff;
  border-bottom-color: #cdcdcd;
  color: #000;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #f0f0f0;
  border-color: #f0f0f0;
  color: #000;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="xs"
>
  <span>
    xs
  </span>
</button>
`;

exports[`Button Snapshots matches size snapshots 3`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #fff;
  border-color: #f0f0f0;
  border-top-color: #fff;
  border-bottom-color: #d1d1d1;
  color: #000;
  font-size: 11px;
  border-radius: 6px;
  padding: 4px 6px;
  text-transform: uppercase;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #ececec;
  border-color: #ddd;
  border-top-color: #f4f4f4;
  border-bottom-color: #bebebe;
  color: #000;
}

.c0:hover {
  background-color: #fbfbfb;
  border-color: #ececec;
  border-top-color: #fff;
  border-bottom-color: #cdcdcd;
  color: #000;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #f0f0f0;
  border-color: #f0f0f0;
  color: #000;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="sm"
>
  <span>
    sm
  </span>
</button>
`;

exports[`Button Snapshots matches size snapshots 4`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #fff;
  border-color: #f0f0f0;
  border-top-color: #fff;
  border-bottom-color: #d1d1d1;
  color: #000;
  font-size: 18px;
  border-radius: 6px;
  padding: 4px 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #ececec;
  border-color: #ddd;
  border-top-color: #f4f4f4;
  border-bottom-color: #bebebe;
  color: #000;
}

.c0:hover {
  background-color: #fbfbfb;
  border-color: #ececec;
  border-top-color: #fff;
  border-bottom-color: #cdcdcd;
  color: #000;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #f0f0f0;
  border-color: #f0f0f0;
  color: #000;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="lg"
>
  <span>
    lg
  </span>
</button>
`;

exports[`Button Snapshots matches size snapshots 5`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #fff;
  border-color: #f0f0f0;
  border-top-color: #fff;
  border-bottom-color: #d1d1d1;
  color: #000;
  font-size: 21px;
  border-radius: 6px;
  padding: 4px 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #ececec;
  border-color: #ddd;
  border-top-color: #f4f4f4;
  border-bottom-color: #bebebe;
  color: #000;
}

.c0:hover {
  background-color: #fbfbfb;
  border-color: #ececec;
  border-top-color: #fff;
  border-bottom-color: #cdcdcd;
  color: #000;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #f0f0f0;
  border-color: #f0f0f0;
  color: #000;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="xl"
>
  <span>
    xl
  </span>
</button>
`;

exports[`Button Snapshots matches type snapshots 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #E4251A;
  border-color: #d01b10;
  border-top-color: #e2342b;
  border-bottom-color: #a10b02;
  color: #fff;
  font-size: 14px;
  border-radius: 6px;
  padding: 4px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #ca180e;
  border-color: #b31006;
  border-top-color: #d51d12;
  border-bottom-color: #7c0700;
  color: #ececec;
}

.c0:hover {
  background-color: #df2217;
  border-color: #c9180e;
  border-top-color: #e42c22;
  border-bottom-color: #9a0900;
  color: #fbfbfb;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #707070;
  border-color: #707070;
  color: #f0f0f0;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="danger"
  type="danger"
>
  <span>
    danger
  </span>
</button>
`;

exports[`Button Snapshots matches type snapshots 2`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #094dff;
  border-color: #0041e9;
  border-top-color: #1b5afc;
  border-bottom-color: #0030ac;
  color: #fff;
  font-size: 14px;
  border-radius: 6px;
  padding: 4px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #003ee2;
  border-color: #0036c3;
  border-top-color: #0444ed;
  border-bottom-color: #002586;
  color: #ececec;
}

.c0:hover {
  background-color: #0147ff;
  border-color: #003ee1;
  border-top-color: #1454fb;
  border-bottom-color: #002da4;
  color: #fbfbfb;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #757575;
  border-color: #757575;
  color: #f0f0f0;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="info"
  type="info"
>
  <span>
    info
  </span>
</button>
`;

exports[`Button Snapshots matches type snapshots 3`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #0aab2a;
  border-color: #049320;
  border-top-color: #0eb630;
  border-bottom-color: #005912;
  color: #fff;
  font-size: 14px;
  border-radius: 6px;
  padding: 4px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #038c1e;
  border-color: #007017;
  border-top-color: #059922;
  border-bottom-color: #00330a;
  color: #ececec;
}

.c0:hover {
  background-color: #09a527;
  border-color: #038c1d;
  border-top-color: #0db12c;
  border-bottom-color: #005210;
  color: #fbfbfb;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #4b4b4b;
  border-color: #4b4b4b;
  color: #f0f0f0;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="primary"
  type="primary"
>
  <span>
    primary
  </span>
</button>
`;

exports[`Button Snapshots matches type snapshots 4`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #f8b400;
  border-color: #d99e00;
  border-top-color: #fbb90c;
  border-bottom-color: #9c7100;
  color: #fff;
  font-size: 14px;
  border-radius: 6px;
  padding: 4px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #d29800;
  border-color: #b38200;
  border-top-color: #dea103;
  border-bottom-color: #765600;
  color: #ececec;
}

.c0:hover {
  background-color: #f0ae00;
  border-color: #d19800;
  border-top-color: #fbb704;
  border-bottom-color: #946b00;
  color: #fbfbfb;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #6d6d6d;
  border-color: #6d6d6d;
  color: #f0f0f0;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="warning"
  type="warning"
>
  <span>
    warning
  </span>
</button>
`;

exports[`Button Snapshots matches type snapshots 5`] = `
.c0 {
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: 600;
  border-width: 1px;
  line-height: 1.4;
  border-style: solid;
  text-transform: none;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  background-color: #fff;
  border-color: #f0f0f0;
  border-top-color: #fff;
  border-bottom-color: #d1d1d1;
  color: #000;
  font-size: 14px;
  border-radius: 6px;
  padding: 4px 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0:hover {
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

.c0:focus,
.c0:active {
  -webkit-transition: all 0 ease;
  transition: all 0 ease;
}

.c0 > * {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
}

.c0:active {
  -webkit-transition-duration: 0s;
  transition-duration: 0s;
  background-color: #ececec;
  border-color: #ddd;
  border-top-color: #f4f4f4;
  border-bottom-color: #bebebe;
  color: #000;
}

.c0:hover {
  background-color: #fbfbfb;
  border-color: #ececec;
  border-top-color: #fff;
  border-bottom-color: #cdcdcd;
  color: #000;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0aab2a;
  z-index: 1;
}

.c0[disabled],
.c0[disabled]:hover,
.c0[disabled]:focus,
.c0[disabled]:active {
  cursor: default;
  opacity: 0.8;
  background-color: #f0f0f0;
  border-color: #f0f0f0;
  color: #000;
}

.c0 > svg {
  width: 24px;
  height: 24px;
}

.c0 > :not(:first-child) {
  margin-left: 4px;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

<button
  class="c0"
  orientation="horizontal"
  title="polling"
  type="polling"
>
  <span>
    polling
  </span>
</button>
`;
